:art: Further animation refinements.